[CHORE] add pytest plugin to skip no test errors and update requirements.txt

--- a/.github/workflows/flask-scaffold.yml
+++ b/.github/workflows/flask-scaffold.yml
@@ -36,4 +36,4 @@ jobs:
         flake8 . --count --show-source --statistics --exclude venv --ignore E501,E722,F401
     - name: Test with pytest
       run: |
-        pytest
+        pytest --suppress-no-test-exit-code
