--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,33 @@
+astroid==2.4.2
+attrs==20.3.0
 cffi==1.14.4
 click==7.1.2
 cryptography==3.3.1
+flake8==3.8.4
 Flask==1.1.2
 Flask-Cors==3.0.10
 Flask-SQLAlchemy==2.4.4
 gunicorn==20.0.4
+iniconfig==1.1.1
+isort==5.7.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
+lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
+mccabe==0.6.1
+packaging==20.9
+pluggy==0.13.1
+py==1.10.0
+pycodestyle==2.6.0
 pycparser==2.20
+pyflakes==2.2.0
 PyMySQL==1.0.2
+pyparsing==2.4.7
+pytest==6.2.2
+pytest-custom-exit-code==0.3.0
 PyYAML==5.4.1
 six==1.15.0
 SQLAlchemy==1.3.22
+toml==0.10.2
 Werkzeug==1.0.1
+wrapt==1.12.1
